commit on 'main'

--- a/notebooks/notes.ipynb
+++ b/notebooks/notes.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Resources\n",
+    "### Resources\n",
     "- https://scikit-learn.org/stable/modules/classes.html \n",
     "- https://spark.apache.org/docs/1.2.2/api/python/pyspark.mllib.html "
    ]
@@ -25,47 +25,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Regression\n",
-    "\n",
-    "## Table of Contents\n",
-    "\n",
-    "1. What is regression? \n",
-    "2. Assumptions of regression\n",
-    "\n",
-    "### Simple Linear Regression\n",
-    "\n",
-    "### Multiple Linear Regression\n",
-    "\n",
-    "### Generalized Linear Models\n",
-    "\n",
-    "### Regularization"
+    "### Table of Contents\n",
+    "- Regression Methods\n",
+    "- Bias-Variance Trade-Off\n",
+    "- Validation and Cross-Validation\n",
+    "- Hyperparameter Tuning\n",
+    "- Generalized Linear Methods\n",
+    "- Tree-Based Methods\n",
+    "- Other Classifiers\n",
+    "- K-Nearest Neighbors (KNN)\n",
+    "- Support Vector Machines (SVM)\n",
+    "- Naive Bayes\n",
+    "- Linear/Quadrant Discriminant Analysis (LDA/QDA)\n",
+    "- Assessing Performance\n",
+    "- Dimensionality Reduction"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classification\n",
+    "## Feature engineering\n",
     "\n",
-    "## Introduction\n",
-    "1. What is classification? \n",
-    "2. Why not linear regression? \n",
+    "## Hyperparameter Tuning\n",
     "\n",
-    "## Classifiers \n",
+    "We can use grid search or randomized search to search for the optimal hyperparameter combination. It is more preferable to use randomized search when the hyperparameter space is large. Instead of trying out all possible combinations, it evaluates a given number of random combinations by selecting a random hyperparameter value at every iteration. \n",
     "\n",
-    "3. Logistic Regression\n",
-    "4. K-Nearest Neighbors (KNN) \n",
-    "5. Support Vector Machines \n",
-    "6. Tree Methods\n",
-    "7. Naive Bayes (NB)\n",
-    "8. Linear/Quadrant Discriminant Analysis (LDA/QDA)\n",
-    "9. How multi-class classification can be a binary classification problem\n",
+    "## Validation Set + Cross-Validation\n",
     "\n",
-    "## Evaluating classifiers\n",
-    "1. Confusion Matrix\n",
-    "2. Precision and Recall\n",
-    "3. F1-Score\n",
-    "4. ROC Curve\n"
+    "After we have divided our dataset into a training and test set, we have to think split our training set into 2 more parts, one for training and one for validation. We need a validation set because it is the closest estimate of the test error without having to touch the test set. \n",
+    "\n",
+    "![alt text](https://miro.medium.com/max/1400/1*AAwIlHM8TpAVe4l2FihNUQ.png)\n",
+    "\n",
+    "Cross validation works as follows, \n",
+    "\n",
+    "1. Split the training set into $k$ chunks of data. \n",
+    "2. For each model with set of hyperparameters and complexity, \n",
+    "    - Train the model on $k - 1$ chunks and leave the $i$th chunk for validation\n",
+    "    - Calculate the error of the model on the validation set\n",
+    "3. Average the validation set error over all the $k$ chunks\n",
+    "\n",
+    "In the case where we are tuning $m$ hyperparameters, and using an n-fold cross validation, we are doing m*n training rounds. "
    ]
   },
   {
@@ -287,15 +287,106 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ensemble Methods\n",
+    "## Tree-based Methods\n",
     "\n",
-    "### Bagging - Random Forest\n",
+    "Tree-based methods involve segmenting the predictor space (values of predictor variables) into a number of regions based on a set of splitting rules, and predictions are made for a given observation based on the mean or mode of the response values for observations in the region it belongs to.\n",
     "\n",
-    "### Boosting\n",
-    "#### AdaBoost\n",
-    "#### Gradient Boosting\n",
-    "#### Extreme Gradient Boosting (XGBoost)\n",
-    "### Stacking"
+    "### Motivations\n",
+    "\n",
+    "### Disadvantages\n",
+    "\n",
+    "### Decision Trees\n",
+    "\n",
+    "Decision trees can be used for regression or classification tasks. To build decision trees, \n",
+    "1. Divide the predictor space into $J$ distinct and non-overlapping regions $R_1, \\ldots, R_j$ by making splits based on predictor feature values\n",
+    "2. For every observation that falls into a region $R_j$, we make the same prediction based on the mean of response values of observations (regression)/most commonly occuring class in that region (classification).\n",
+    "\n",
+    "#### Regression Trees\n",
+    "\n",
+    "To build a regression tree, we optimize on minimizing the RSS (residual sum of squares) for each split/region. The RSS is defined as $\\sum_{i \\in R_j}(y_i - \\hat{y}_{R_j})^2$ and can be interpreted as **the deviation from the predicted reponse to the actual response value a region/split**. This optimization is a top-down, greedy approach because we begin spltting from the top of the tree and at each step of building the tree, we try to make the split that results in the lowest RSS. We don't care about making a split that will give a better tree in the future. We consider all predictors and all possible split points for each of the predictors at each step and choose the pair that results in the lowest RSS. For a single split, we can think of it as getting 2 regions and we will have to use the sum of the RSS from the 2 regions as our RSS to optimize on. \n",
+    "\n",
+    "$$R_1(j, s) = \\{X | X_j < s\\} \\text{ and } R_2(j, s) = \\{X | X_j \\geq s\\} \\\\ \\text{minimize} \\sum_{i: x_i \\in R_1(j, s)}(y_i - \\hat{y}_{R_1})^2 + \\sum_{i: x_i \\in R_2(j, s)}(y_i - \\hat{y}_{R_2})^2 $$ \n",
+    "\n",
+    "The next split will be on one of the previous splits instead of the entire predictor space. Again, the choice will be decided by optimizing on RSS. This splitting is called **recursive binary splitting**.\n",
+    "\n",
+    "#### Classification Trees\n",
+    "\n",
+    "To build a classification tree, we don't optimize on RSS as it doesn't work with categorical variables. Instead, we can optimize on the classification error rate, Gini index or entropy. \n",
+    "\n",
+    "Since we plan to assign an observation the class that appears the most in that region, the classification error rate is a natural choice as it is the fraction of observations in that region that don't belong to the most common class. This way, we try to get a region that has observations that are most similar with each other. \n",
+    "\n",
+    "However, classification error rate can be a naive metric and not sensitive enough. We can use the Gini index which is a measure of total variance across observations of the K classes. $\\hat{p}_{mk}$ here is the proportion of observations that are in the kth class of the mth region. Since our goal is to make a split where it results in a region where observations are dominated by a class assignment, the Gini index measures node/split/region purity. \n",
+    "\n",
+    "If all of $\\hat{p}_{mk}$ are close to 0 or 1, and ideally one $\\hat{p}_{mk}$ is close to 1 and others close to 0 can give the Gini index a small value. A small value indicates the high node/split purity. \n",
+    "\n",
+    "$$G = \\sum_{k = 1}^{K}\\hat{p}_{mk}(1 - \\hat{p}_{mk})$$\n",
+    "\n",
+    "Entropy is an alternative to the Gini index and like it, entropy will take on a small value if the mth node/split/region is pure. \n",
+    "\n",
+    "#### Which quality metric to choose?\n",
+    "\n",
+    "#### Tree Pruning\n",
+    "\n",
+    "### Ensemble Methods \n",
+    "\n",
+    "An ensemble method is an approach that combines many simple \"building block\" models that lead to mediocre predictions, **weak learners**, to product a single powerful model. \n",
+    "\n",
+    "#### Bagging / Bootstrap aggregation\n",
+    "\n",
+    "Decision trees suffer from high variance, meaning it can give vastly different predictions to different data. Also recall, a high variance model means the model is overfitting to the data and can perform very badly on unknown data. \n",
+    "\n",
+    "An approach with low variance can yield similar results if applied repeatedly to distinct datasets. By taking advantage of this and bootstrapping, we can reduce the variance of a model and improve its performance. \n",
+    "\n",
+    "Recall that for a set of n independent observations each with a variance $\\sigma^2$, the variance of the mean of observations is $\\sigma^2/n$. It is apparent that**averaging over a set of observations reduces variance**. \n",
+    "\n",
+    "From here, it is natural to collect many datasets, build a model for each of the bootstrapped datasets and then average the predictions from those models. For classification more specifically, we can simply take the most commonly occurring class among the trees' predictions–the **majority vote**.\n",
+    "\n",
+    "To get distinct datasets, we can use bootstrapping to take repeated (with replacement) samples from a single dataset. The trees applied on these bootstraped datasets are grown deep and not pruned. Overall, we can see that even though each individual tree has high variance, once we average over these trees, we can reduce the variance. \n",
+    "\n",
+    "This process happens for each observation in the original dataset to assign a class assignment/give a predicted value. \n",
+    "\n",
+    "##### Out-of-Bag (OOB) Error Estimation \n",
+    "\n",
+    "For a bagged model, we don't need to use cross-validatioin or validation set to validate our model.\n",
+    "\n",
+    "On average, each tree in a bagged model uses around 2/3 of observations in the original dataset. The remaining 1/3 not used to train a tree are Out-of-Bag (OOB) observations. \n",
+    "\n",
+    "For an observation, we can predict the response/class of it using trees where the observation is OOB/not in the bootstrapped dataset. This will yield 1/3 of the number of trees we use to train a tree. Like training a tree, we can average the predicted responses or take a majority vote. This can be repeated for all observations in the original observations, and we can take the overall OOB MSE (regression) or OOB classification error as a performance metric to estimate the test error. \n",
+    "\n",
+    "This works because we're only using trees that were not fit using the observation of interest. OOB is useful when we are dealing with large datasets and cross-validation can be expensive. \n",
+    "\n",
+    "#### Random Forest\n",
+    "\n",
+    "Random forest is an upgraded version of the bagging ensemble method whereby it decorrelates the bagged trees.\n",
+    "\n",
+    "Unlike bagging, each split considered in a decision tree uses a random sample of $m$ predictors as split candidates from the full set of $p$ predictors. A fresh sample of $m$ predictors is considered at each split, and typically $m$ is approximately $\\sqrt{p}$. This means that each split can't even consider a majority of the predictors. \n",
+    "\n",
+    "##### How can trees be correlated with each other?\n",
+    "\n",
+    "Suppose we have a strong predictor along with a few other moderately strong predictors. When we build a model that uses bagged trees, the bagged trees can \"look\" quite similar to each other because they'll most likely use the strong predictor as the top split. The predictions of these bagged trees will be highly correlated and will not lead to as large of a reduction in variance compared to averaging over uncorrelated predictions.\n",
+    "\n",
+    "##### How does Random Forest overcome the shortcomings of bagging?\n",
+    "\n",
+    "Random forests forces each split in a bagged tree to consider only a subset of predictors. On average, only $(p - m)/p$ will not even consider the strong predictor and other predictors have a chance. More importantly, this decorrelates the trees and the predictions. The average of the predictions from bagged trees is more reliable.\n",
+    "\n",
+    "#### Boosting (Additive Modeling)\n",
+    "\n",
+    "![alt text](https://miro.medium.com/max/1400/1*QJZ6W-Pck_W7RlIDwUIN9Q.jpeg)\n",
+    "\n",
+    "Unlike bagging, boosting involves the trees being grown sequentially: each tree is using information from previously grown trees. Types of boosting models include AdaBoost, Gradient Boosting, XGBoost. \n",
+    "\n",
+    "##### AdaBoost\n",
+    "\n",
+    "For an AdaBoost classifier, the algorithm first trains a base classifier on the dataset and makes a prediction. The algorithm then increases the relative weight of misclassified observations. Then, a second classifier is trained on the modified dataset, now using the updated weights and makes predictions. This process repeats until a cutoff. \n",
+    "\n",
+    "##### Gradient Boosting\n",
+    "\n",
+    "In gradient boosting, we fit a tree to the residuals from the current model rather than its outcome as the response. We then add this new decision tree to the fitted function (entire model) to update the residuals of the entire model. By fitting the small trees to the residuals, we can slowly improve the fitted function in areas where it doesn't perform well because we're trying to find a relationship between the predictor variables and the residuals. \n",
+    "\n",
+    "##### Hyperparameters\n",
+    "- Number of trees. Unlike bagging and random forests, boosting can overfit if number of trees is too large. \n",
+    "- Shrinkage parameter, a small positive number. This controls the rate the boosting learns. A small shrinkage parameter can require a large number of trees to achieve good performance. \n",
+    "- Number of splits in each tree. This controls the complexity of the boosted ensemble. "
    ]
   },
   {
